# ai-engineering-lab-ukef-copilot-workshop

./: README.md  SETUP-GUIDE.md  participant-handout.md
exercise-01-code-quality-pr-review/: README.md  example-ukef-standards.md  playbook-copilot.md
exercise-02-custom-instructions-library/: README.md  playbook-copilot.md
exercise-03-build-your-own-tooling/: README.md  playbook-copilot.md
exercise-03-build-your-own-tooling/mcp-exercises/: README.md  SETUP.md
exercise-03-build-your-own-tooling/mcp-exercises/.cursor/: mcp.json
exercise-03-build-your-own-tooling/mcp-exercises/exercises/: 01-naming.md  02-patterns.md  03-structure.md  04-refactor.md  05-full-feature.md
exercise-03-build-your-own-tooling/mcp-exercises/nodejs-starter/: package.json
exercise-03-build-your-own-tooling/mcp-exercises/python-starter/: main.py  requirements.txt
exercise-03-build-your-own-tooling/mcp-server/: .gitignore  README.md
node-samples/: README.md  package.json
pr-review-skill/: README.md  copilot-instructions.md  pr-review.prompt.md  review-prompt-template.md  sample-pr-01-naming.diff  sample-pr-02-missing-tests.diff  sample-pr-03-structure.diff
python-samples/: .gitignore  README.md  pyproject.toml  setup.py
python-samples/src/samples/: __init__.py
python-samples/src/samples/exercise01/: __init__.py  cover_calculator.py  submission_processor.py
python-samples/src/samples/exercise02/: aggregator.py
python-samples/tests/: conftest.py
python-samples/tests/challenge01/: test_cover_calculator.py
python-samples/tests/challenge02/: test_aggregator.py
(+31 files in other folders)
