[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukef-enablement-day-samples"
version = "1.0.0"
description = "Sample code for UKEF AI Enablement Day exercises"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "AI Engineering Lab" }]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
